lexer_parser/src/test/exempleFile/miniJaja/success/methNoReturn.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation des methodes	*/
/************************/

class methNoReturn{

    int myMeth(int x, boolean y){
        int a = 5;
        x++;
        y = false; 
    };

	main {

	}
}